# cafepast

./: README.md
cafepast/: CMakeLists.txt  CMakeLists.txt.user.b9f2877  language_en.ts  language_mk.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cafepast/adisyon/: adisyonmodel.cpp  adisyonmodel.h  adisyonwidget.cpp  adisyonwidget.h
cafepast/cafecore/: adisyonitem.cpp  adisyonitem.h  kategoriitem.cpp  kategoriitem.h  languageitem.cpp  languageitem.h  paraitem.cpp  paraitem.h  subeitem.cpp  subeitem.h  urunitem.cpp  urunitem.h  useritem.cpp  useritem.h
cafepast/dialogs/: askdialog.cpp  askdialog.h  kategorimanagerwidget.cpp  kategorimanagerwidget.h  otheroptionsdialog.cpp  otheroptionsdialog.h
cafepast/dialogs/adisyonDialog/: changedialog.cpp  changedialog.h
cafepast/dialogs/kategori/: deletewidget.cpp  deletewidget.h  kategorilistmodel.cpp  kategorilistmodel.h  kategorilistwidget.cpp  kategorilistwidget.h  yenieklewidget.cpp  yenieklewidget.h
cafepast/dialogs/langDialog/: languagedialog.cpp  languagedialog.h  languagetextbankdialog.cpp  languagetextbankdialog.h  textbanktableview.cpp  textbanktableview.h
cafepast/dialogs/paraDialog/: paradialog.cpp  paradialog.h
cafepast/dialogs/raporDialog/: rapordialog.cpp  rapordialog.h  view.cpp  view.h
cafepast/dialogs/subeDialog/: subedialog.cpp  subedialog.h  subetableview.cpp  subetableview.h
cafepast/dialogs/urunDialog/: urunmanagerdialog.cpp  urunmanagerdialog.h  uruntableview.cpp  uruntableview.h
cafepast/dialogs/userDialog/: usermanagerdialog.cpp  usermanagerdialog.h  usertableview.cpp  usertableview.h
cafepast/global/: globalVar.cpp  globalVar.h  informationwidget.cpp  informationwidget.h  loginscreen.cpp  loginscreen.h
cafepast/icon/: appico.rc
cafepast/menu/: urunmodel.cpp  urunmodel.h
cafepast/model/: kategorilistmodel.cpp  kategorilistmodel.h  languagemodel.cpp  languagemodel.h  languagetextmodel.cpp  languagetextmodel.h  paraitemmodel.cpp  paraitemmodel.h  subemodel.cpp  subemodel.h  urunmodel.cpp  urunmodel.h  usermodel.cpp  usermodel.h
cafepast/stackedWidget/: SlidingStackedWidget.cpp  SlidingStackedWidget.h
cafepast/tabWidgets/: abstractlistwidget.cpp  abstractlistwidget.h  poahacawidget.cpp  poahacawidget.h  tabwidget.cpp  tabwidget.h
